# AWVGeneric

./: README.md  pyproject.toml
API/eminfra/: BestekService.py  EMInfraDomain.py  GeometrieService.py  LocatieService.py  ToezichterService.py
CodingAgents/: PROJECT.md  ai.md  suggestions.md
UseCases/: utils.py
UseCases/Bestekkoppeling/E40_RSS/: E40_RSS_update.py
UseCases/Bestekkoppeling/Vlaams-Brabant/: toevoegen_bestek.py
UseCases/Bestekkoppeling/tunnels_mechanisch_bestek/: tunnels_mechanisch_bestek.py
UseCases/Document/: documenten overdragen keuringen meteo_2.py
UseCases/betrokkenerelaties/TunnelOrganisatieVlaanderen/: agent_info.py  agent_update.py
UseCases/betrokkenerelaties/UpdateAgent/Laagspanningsbord/: agent_update.py
